<resources>
    <string name="app_name">Diner\'s ready !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MAIN NAVIGATION -->
    <string name="item_calendar">Calendar</string>
    <string name="item_recipes">Cookbook</string>
    <string name="item_groceries">Shopping</string>
    <string name="item_search">Search</string>
    <string name="item_last_week">Last week</string>
    <string name="item_next_week">Next week</string>
    <string name="item_today">Today</string>
    <string name="item_help">Help</string>

    <!-- RECIPE FRAGMENT -->
    <string name="empty_title">¯\\_(ツ)_/¯</string>
    <string name="empty_message">The cookbook is empty. Add some recipes to start planning your menus.</string>

    <!-- EDIT RECIPE -->
    <string name="label_submit">Save</string>
    <string name="label_title">Title</string>
    <string name="label_meal">Type</string>
    <string name="label_portions">Portions</string>
    <string name="label_ingredient">Ingredients</string>
    <string name="label_ingredient_value">Value</string>
    <string name="label_ingredient_unit">Unit</string>
    <string name="label_ingredient_quantity">Quantity</string>
    <string name="label_ingredient_label">Ingredient</string>
    <string name="label_steps">Preparation</string>
    <string name="label_step_label">Step</string>
    <string name="label_picture">Picture</string>
    <string name="label_picture_add">Change</string>
    <string name="label_picture_delete">Delete</string>

    <!--- TAB LABELS -->
    <string name="tab_ingredient_groceries">Groceries</string>
    <string name="tab_ingredient_fruits">Fruits vegetables</string>
    <string name="tab_ingredient_meat">Meat fish</string>
    <string name="tab_ingredient_fresh">Fresh products</string>
    <string name="tab_ingredient_drinks">Drinks</string>
    <string name="tab_ingredient_divers">Other</string>


    <!-- CALENDAR FRAGMENT -->
    <string name="calendar_monday">Monday</string>
    <string name="calendar_tuesday">Tuesday</string>
    <string name="calendar_wednesday">Wednesday</string>
    <string name="calendar_thursday">Thursday</string>
    <string name="calendar_friday">Friday</string>
    <string name="calendar_saturday">Saturday</string>
    <string name="calendar_sunday">Sunday</string>

    <string name="calendar_add_groceries">Add to shopping list</string>
    <string name="calendar_delete_event">Delete</string>
    <string name="calendar_product_added">Ingredients added to the shopping list</string>
    <string name="calendar_product_added_error">Error, your meal is already in the shopping list</string>
    <string name="calendar_product_no_more_groceries">Nothing more to put in the shopping list</string>

    <!-- RECIPE ACTIVITY -->
    <string name="label_delete">Delete</string>
    <string name="label_edit">Edit</string>
    <string name="label_export">Export</string>
    <string name="label_share">Share</string>
    <string name="recipe_delete_title">Delete the recipe</string>
    <string name="recipe_delete_message">Warning, all your menus and shopping items related to this recipe will be deleted as well.</string>
    <string name="recipe_delete_delete">Delete</string>
    <string name="recipe_delete_cancel">Cancael</string>
    <string name="recipe_export">Export the recipes</string>
    <string name="recipe_import">Import recipes</string>


    <!-- IMPORT EXPORT -->
    <string name="import_failed">Importation failed :(</string>

    <!-- GROCERIES -->
    <string name="dialog_add_title">Add to shopping list</string>
    <string name="dialog_add_cancel">Cancel</string>
    <string name="dialog_add_submit">Add</string>

    <string name="item_remove_check">Clean</string>
    <string name="item_events_manager">Manage meals</string>
    <string name="item_remove_all">Delete all items</string>
    <string name="dialog_product">Product</string>
    <string name="dialog_quantity">Quantity</string>
    <string name="dialog_unit">Unit</string>
    <string name="dialog_value">Value</string>
    <string name="label_empty_recipe">Manual add</string>

    <string name="groceries_empty_title">ʕ •ᴥ•ʔ</string>
    <string name="groceries_empty_message">Nothing left in the shopping list. Plan some menus to get your shopping list.</string>

    <string name="groceries_change_category" >Change product category</string>

    <!--- PRODUCT -->
    <string name="product">Products</string>
    <string name="product_singular">Product</string>
    <string name="product_name">Name</string>
    <string name="product_unit">Default unit</string>
    <string name="product_section">Category</string>

    <string name="product_choose_category">Choose a category</string>


    <!-- CATEGORIES -->
    <string name="category_meal">Meal</string>
    <string name="category_starter">Starter</string>
    <string name="category_dessert">Dessert</string>
    <string name="category_other">Other</string>


    <string name="product_delete_dialog_message">Impossible to delete the product because it is used in one of your recipes.</string>
    <string name="product_delete_dialog_ok">Ok</string>

    <string name="crash_messge">Sorry, the app crashed ! A report will be sent to the developer.</string>

    <!-- WIZARD ACTIVITY -->

    <string name="wizard_loading_label">Fetching recipe</string>
    <string name="wizard_error_url">Error encountered with this URL</string>
    <string name="wizard_title_start">Add a new recipe</string>
    <string name="wizard_title_info">New recipe</string>
    <string name="wizard_title_ingredients">Ingredients</string>
    <string name="wizard_title_steps">Directions</string>
    <string name="wizard_submit_message" >Recipe succefully saved !</string>

    <string name="wizard_warning_label">No bounded product</string>
    <string name="wizard_error_ingredients">There are some errors with the ingredients</string>

    <string name="wizard_url_hint">URL</string>
    <string name="wizard_url_submit">Add</string>

    <string name="wizard_navigation_cancel">Cancel</string>
    <string name="wizard_navigation_next">Next</string>
    <string name="wizard_navigation_back">Back</string>
    <string name="wizard_navigation_submit">Save</string>


    <string-array name="meals">
        <item>Meal</item>
        <item>Starter</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string name="default_unit">g</string>

    <string-array name="units">
        <item></item>
        <item>g</item>
        <item>kg</item>
        <item>L</item>
        <item>cl</item>
        <item>ml</item>
        <item>cup</item>
        <item>T</item>
        <item>t</item>
        <item>pinch(es)</item>
        <item>sachet(s)</item>
        <item>pot(s)</item>
    </string-array>

    <string-array name="section">
        <item>Groceries</item>
        <item>Fruits vegetables</item>
        <item>Meat fish</item>
        <item>Fresh products</item>
        <item>Drinks</item>
        <item>Other</item>
    </string-array>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>