<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/button_submit"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:layout_margin="8dp"
        android:padding="0dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.pigeoff.menu.views.ChipCategories
            android:id="@+id/chip_group_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:scrollbars="none"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_groceries"
                android:text="@string/tab_ingredient_groceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_fruits"
                android:text="@string/tab_ingredient_fruits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_meat"
                android:text="@string/tab_ingredient_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_fresh"
                android:text="@string/tab_ingredient_fresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_drinks"
                android:text="@string/tab_ingredient_drinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/chip_filter_divers"
                android:text="@string/tab_ingredient_divers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </com.pigeoff.menu.views.ChipCategories>
    </HorizontalScrollView>


</LinearLayout>