<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <!--<TextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:id="@+id/edit_label"
                android:layout_width="0dp"

                android:layout_margin="8dp"

                android:layout_height="wrap_content"
                android:layout_weight="1" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dialog_product"
                android:layout_margin="8dp">

                <AutoCompleteTextView
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:id="@+id/edit_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_submit"

                android:layout_margin="8dp"

                android:padding="0dp"/>
        </LinearLayout>


        <!--<com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_product"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_label"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dialog_value"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:hint="@string/dialog_unit">

                <AutoCompleteTextView
                    android:id="@+id/edit_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:maxLines="1"
                    app:simpleItems="@array/units" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.pigeoff.menu.views.ChipCategories
                android:id="@+id/chip_group_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbars="none"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_groceries"
                    android:text="@string/tab_ingredient_groceries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_fruits"
                    android:text="@string/tab_ingredient_fruits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_meat"
                    android:text="@string/tab_ingredient_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_fresh"
                    android:text="@string/tab_ingredient_fresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_drinks"
                    android:text="@string/tab_ingredient_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chip_filter_divers"
                    android:text="@string/tab_ingredient_divers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </com.pigeoff.menu.views.ChipCategories>


        </HorizontalScrollView>

    </LinearLayout>





</LinearLayout>