<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusBottomStart="100dp"
                app:boxCornerRadiusBottomEnd="100dp"
                app:boxCornerRadiusTopStart="100dp"
                app:boxCornerRadiusTopEnd="100dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_search"
                app:startIconDrawable="@drawable/ic_search"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"
                    android:imeOptions="actionSearch"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:scrollbars="none">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_groceries"
                        android:text="@string/tab_ingredient_groceries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_fruits"
                        android:text="@string/tab_ingredient_fruits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_meat"
                        android:text="@string/tab_ingredient_meat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_fresh"
                        android:text="@string/tab_ingredient_fresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_drinks"
                        android:text="@string/tab_ingredient_drinks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_divers"
                        android:text="@string/tab_ingredient_divers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:padding="8dp"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>