<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusBottomStart="100dp"
            app:boxCornerRadiusBottomEnd="100dp"
            app:boxCornerRadiusTopStart="100dp"
            app:boxCornerRadiusTopEnd="100dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_search"
            app:startIconDrawable="@drawable/ic_search"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:imeOptions="actionSearch"/>

        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_sort" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:scrollbars="none">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_meal"
                        android:text="@string/category_meal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_starter"
                        android:text="@string/category_starter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_dessert"
                        android:text="@string/category_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.Material3.Chip.Filter"
                        android:id="@+id/chip_filter_other"
                        android:text="@string/category_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>